Refactor redo method in Controller and add pom.xml for Maven project structure